--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,96 @@
-.App {
-  text-align: center;
+* {
+  outline: none;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  min-height: 100%;
+  background-color: #eee;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
+.nav{
+  
+  padding: 4%;
+  height: 11.5vh;
+  
+}
+.search{
+  float: left;
+}
+.filter{
+  float: right;
+  right: 5px;
+  width: 25%;
+  padding: 10px;
+  margin: 0;
+  background-color: #4763df;
+  border-radius: 20px;
+  box-shadow: 0 10px 40px #4763df, 0 0 0 10px #ffffffeb;
+}
+.tb {
+  display: table;
+  width: 100%;
+}
+
+.td {
+  display: table-cell;
+  vertical-align: middle;
+}
+.filtertd{
+  left: 50%;
+}
+input,
+button {
+  color: #fff;
+  font-family: Nunito;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  background-color: transparent;
+}
+#cover {
+  /* position: absolute; */
+  top: 0;
+  left: 0;
+  width: 50%;
+  padding: 10px;
+  margin: 0;
+  background-color: #4763df;
+  border-radius: 20px;
+  box-shadow: 0 10px 40px #4763df, 0 0 0 10px #ffffffeb;
+  /* transform: scale(0.6); */
+}
+
+form {
+  height: 26px;
+}
+
+input[type="text"] {
+  width: 100%;
+  height: 16px;
+  font-size: 1.1em;
+}
+
+input[type="text"]::placeholder {
+  color: #eee;
+}
+button {
+  position: relative;
+  display: block;
+  width: 44px;
+  height: 26px;
+  cursor: pointer;
+}
+@media only screen and (min-width: 640px){
+  .filter{
+    display: none;
   }
-}
-
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-  color: rgb(112, 76, 182);
-}
-
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
+  .nav{
+    height: 6vh;
   }
 }
