--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,14 @@ body {
   min-height: 100%;
   background-color: #eee;
 }
-
+.container{
+  padding: 0 4% 0 4%;
+  text-align: center;
+}
 .nav{
-  
   padding: 4%;
-  height: 11.5vh;
-  
+  height: 25.5vh;
+  overflow: hidden;
 }
 .search{
   float: left;
@@ -30,7 +32,8 @@ body {
   margin: 0;
   background-color: #4763df;
   border-radius: 20px;
-  box-shadow: 0 10px 40px #4763df, 0 0 0 10px #ffffffeb;
+  margin-top: 6%;
+  box-shadow: 0 10px 30px #4763df, 0 0 0 10px #ffffffeb;
 }
 .tb {
   display: table;
@@ -54,18 +57,26 @@ button {
   background-color: transparent;
 }
 #cover {
-  /* position: absolute; */
   top: 0;
   left: 0;
   width: 50%;
-  padding: 10px;
+  padding: 5px;
   margin: 0;
   background-color: #4763df;
   border-radius: 20px;
-  box-shadow: 0 10px 40px #4763df, 0 0 0 10px #ffffffeb;
+  margin-top: 6%;
+  box-shadow: 0 10px 30px #4763df, 0 0 0 10px #ffffffeb;
   /* transform: scale(0.6); */
 }
-
+.addmusic{
+  width: 50%;
+  padding: 5px;
+  background-color: #4763df;
+  border-radius: 20px;
+  box-shadow: 0 10px 30px #4763df, 0 0 0 10px #ffffffeb;
+  margin-left:25% ;
+  margin-top: 25%;
+}
 form {
   height: 26px;
 }
@@ -86,11 +97,78 @@ button {
   height: 26px;
   cursor: pointer;
 }
+/* Checklist */
+.artist{
+  display: flex;
+}
+.albumcheck{
+   display: flex;
+}
+.Check{
+  display: none;
+}
+.checkdetails{
+  padding-left: 10% ;
+}
+/* Album details */
+.album{
+  display: flex;
+}
+.album-image{
+  width: 40%;
+}
+.album-image img{
+  width: 100%;
+  height: 100%;
+}
+.album-details{
+  text-align: left;
+  line-height: .9;
+  padding-left: 4%;
+}
+.album-details p{
+  font-weight: 500;
+}
+/* track table */
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 4%;
+  border: 1px solid #555555;
+}
+
+td, th {
+  text-align: left;
+  padding: 8px;
+  border-right: 1px solid #555555;
+}
+
+.center{
+  text-align: center;
+}
+th{
+  background-color: #adabab;
+}
 @media only screen and (min-width: 640px){
   .filter{
     display: none;
   }
   .nav{
-    height: 6vh;
+    height: 10vh;
+  }
+  
+  #cover{
+    width: 30%;
+  }
+  .addmusic{
+    float: right;
+    margin-top: 6%;
+    margin-left: 0;
+    width: 30%;
+  }
+  /* Albums */
+  .album-image{
+    width: 30%;
   }
 }
